# gestion_cartera_historica_cpp

./: .gitignore  changelog.md  et --hard 0931483  main.py  pyproject.toml  requirements.txt
conf/: config.yaml  table.yaml  tables.yaml
documentation/: map_datamarts_tables_vars.md
documentation/map_datamarts_tables_vars/: map_datamarts.md
documentation/map_datamarts_tables_vars/map_tables_vars/: datamart_estrategico.md  datamart_operativo.md
extra/: TODO.md  creditos_cancelados_no_renovados_meses_atras.sql  creditos_cancelados_no_renovados_vista.sql  socios_activos.sql
sandbox/: mora_anterior.sql
sql/: cartera_moras.sql  colocacion.sql  dim_asesor.sql  fct_flow.sql  fct_stock.sql
sql/bases_de_datos/: dbo.dim_agencia.sql  dbo.dim_asesor.sql  dbo.fct_flow_diario.sql  dbo.fct_meta_agencia_diaria.sql  dbo.fct_meta_agencia_mensual.sql  dbo.fct_stock_mensual.sql
sql/operational/: opr_avance_cartera.sql  opr_cartera_agencia.sql  opr_cartera_asesor.sql  opr_creditos_cancelados.sql  opr_creditos_cancelados_no_renovados.sql  opr_ranking_asesor-202602.sql  opr_ranking_asesor.sql
sql/operational/views/: avance_cartera.sql  creditos_cancelados.sql  creditos_cancelados_no_renovados.sql
sql/strategic/: dim_asesor.sql  fct_flow.sql  fct_stock.sql
sql/strategic/views/: colocacion.sql  (+6 more)
sql/views/: cartera_moras.sql  colocacion.sql  dim_asesor.sql  duracion.sql  repago.sql
sql/vistas/: dbo.vw_dwh_dim_asesor.sql  dbo.vw_dwh_fct_flow_diario.sql  dbo.vw_dwh_fct_stock_mensual.sql
src/components/: extract.py  load.py  transform.py
src/core/: config.py  constants.py
(+26 files in other folders)
