[tool.poetry]
name = "gestion-cartera"
version = "0.1.0"
description = ""
authors = ["Kevin Pérez García <econ.perez.garcia.k@gmail.com>"]
readme = "README.md"
packages = [{include = "gestion_cartera", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
